--- a/ProceduralOverpassWalls/ProceduralObjects.csproj
+++ b/ProceduralOverpassWalls/ProceduralObjects.csproj
@@ -213,7 +213,34 @@
     <EmbeddedResource Include="Icons\CTA_invertVertexSelection.png" />
     <EmbeddedResource Include="Icons\CTA_splitVertex.png" />
   </ItemGroup>
+  <ItemGroup>
+    <ArialFont Include="Build\ArialFont\arial.pofont" />
+    <BuildFiles Include="Build\lang_de.polocale" />
+    <BuildFiles Include="Build\lang_en.polocale" />
+	<BuildFiles Include="Build\lang_es.polocale" />
+	<BuildFiles Include="Build\lang_fr.polocale" />
+	<BuildFiles Include="Build\lang_ja.polocale" />
+	<BuildFiles Include="Build\lang_ko.polocale" />
+	<BuildFiles Include="Build\lang_nl.polocale" />
+	<BuildFiles Include="Build\lang_ru.polocale" />
+	<BuildFiles Include="Build\lang_zh.polocale" />
+	<BuildFiles Include="Build\NativeCube_Procedural.crp" />
+	<BuildFiles Include="Build\NativeSquare_Procedural.crp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Build\ArialFont\arialBold_fonttable.png" />
+    <Content Include="Build\ArialFont\arialItalic_fonttable.png" />
+    <Content Include="Build\ArialFont\arial_fonttable.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="DeployToModDirectory" AfterTargets="Build">
+    <PropertyGroup>
+      <DeployDir>$(LOCALAPPDATA)/Colossal Order/Cities_Skylines/Addons/Mods/$(SolutionName)/</DeployDir>
+    </PropertyGroup>
+    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(DeployDir)" />
+	<Copy SourceFiles="@(ArialFont)" DestinationFolder="$(DeployDir)/ArialFont" />
+	<Copy SourceFiles="@(BuildFiles)" DestinationFolder="$(DeployDir)" />
+  </Target>
   <PropertyGroup>
     <PostBuildEvent>
     </PostBuildEvent>
